Starting other pages

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -22,13 +22,71 @@
         </div>
         <a class="nav-link about" href="index.html">Home</a>
         <hr>
+        <a class="nav-link contact" href="project.html">Project</a>
+        <hr>
         <a class="nav-link portfolio" href="contact.html">Contact Us</a>
         <hr>
-        <a class="nav-link experience" href="#">Video Demo</a>
+        <a class="nav-link experience" href="video.html">Video Demo</a>
         <hr>
-        <a class="nav-link contact" href="#">Site Report</a>
+        <a class="nav-link contact" href="siteReport.html">Site Report</a>
         <hr>
     </div>
+
+    <div class="contact-me">
+        <div class="contact">
+            <h1>Contact</h1>
+        </div>
+        <div class="me">
+            <h1>Me</h1>
+        </div>
+    </div> 
+
+    <hr class="contact-hr">
+    <div class="contact-info">
+        <img src="image/map.jpg" class="map-image">
+
+        <div class="contact-form">
+            <form action="#" method="#">
+                <div class="form-group">
+                    <label for="name">Full Name:</label>
+                    <input type="text" id="name" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number:</label>
+                    <input type="tel" id="phone" placeholder="Enter your phone number">
+                </div>
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <input type="text" id="address" placeholder="Enter your address">
+                </div>
+                <div class="form-group">
+                    <label for="address">Description:</label>
+                    <textarea cols="50">
+                    </textarea>
+                </div>
+                
+                <div class="form-group">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <hr>
+    <div class="get-in-touch">
+        <div class="get-i">
+            <h1>Get i</h1>
+        </div>
+        <div class="n-touch">
+            <h1>n touch</h1>
+        </div>
+    </div>
+
+    <div class="email-btn">
+        <div class="btn">
+            <a href="mailto:subedigurash1@gmail.com">Send Message</a>
+        </div>
+    </div>
+
 
 
 
