--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html
 <html lang="en">
 <head>
  <meta charset="UTF-8">
@@ -32,45 +31,20 @@
         <hr>
     </div>
 
-    <div class="container">
-        <div class="title">
-            <div class="homePageTitle">
-                <div class="aboutme">
-                    <h2>About Me |</h2>
-                </div>
-                <div class="Software-Engineering">
-                    <h2>Software Engineering</h2>
-                </div>
-            </div>
-            <div class="desc">
-                <div class="name">
-                    <p>Hello! My name is Gurash Subedi,</p>
-                </div>
-                <div class="other-desc">
-                    <p>I am a passionate software engineering student currently pursuing my <br>
-                        degree at NAMI.
-                        With a strong foundation in computer science principles and hands-on<br>
-                        experience in various programming languages,
-                        I am committed to developing innovative software solutions.
-                    </p>
-                </div>
-            </div>
-            <div class="tag-line">
-                <p id="dream-text">Transforming dreams into reality</p>
-            </div>
+    <div class="video-demo">
+        <div class="demo">
+            <h1>Video Demo</h1>
         </div>
-
-        <div class="image-container">
-            <img src="image/gurash1.jpg" class="tiger">
-            <div class="overlay">
-                <div>
-                    <p>Name: Gurash Subedi</p>
-                    <p>Address: Shankharapur-5</p>
-                    <p>College: NAMI College</p>
-                </div>
-            </div>
+        <hr>
+        <div class="video">
+            <div style="max-width:800px"><div style="position:relative;padding-bottom:63.75%"><iframe id="kmsembed-0_1xrtqukt" width="800" height="510" src="https://mymedia.northampton.ac.uk/embed/secure/iframe/entryId/0_1xrtqukt/uiConfId/23453349/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="CSY3024_Dipak_KC_Database_Assignment" style="position:absolute;top:0;left:0;width:100%;height:100%;border:0"></iframe></div></div>
         </div>
     </div>
+
+
+
+
+
 </body>
 <footer>
     <div class="footer">
