project page done

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Portfolio | Contact</title>
     
      <link rel="stylesheet" href="styless.css">
     <!-- fontawsome CDNS linke -->
@@ -28,10 +28,16 @@
         <hr>
         <a class="nav-link experience" href="video.html">Video Demo</a>
         <hr>
-        <a class="nav-link contact" href="siteReport.html">Site Report</a>
+        <div class="dropdown">
+            <a class="nav-link contact" href="siteReport.html">Site Report</a>
+            <div class="dropdown-content">
+                <a href="report1.html">Report 1</a>
+                <a href="report2.html">Report 2</a>
+                <a href="report3.html">Report 3</a>
+            </div>
+        </div>
         <hr>
     </div>
-
     <div class="contact-me">
         <div class="contact">
             <h1>Contact</h1>
