--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Portfolio | Homne</title>
     
      <link rel="stylesheet" href="styless.css">
     <!-- fontawsome CDNS linke -->
@@ -28,7 +28,14 @@
         <hr>
         <a class="nav-link experience" href="video.html">Video Demo</a>
         <hr>
-        <a class="nav-link contact" href="siteReport.html">Site Report</a>
+        <div class="dropdown">
+            <a class="nav-link contact" href="siteReport.html">Site Report</a>
+            <div class="dropdown-content">
+                <a href="report1.html">Report 1</a>
+                <a href="report2.html">Report 2</a>
+                <a href="report3.html">Report 3</a>
+            </div>
+        </div>
         <hr>
     </div>
 
@@ -112,7 +119,7 @@
             </div>
 
         </div>
-        
     </div>
 </footer>
+
 </html>
