--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Portfolio | Vide Demo</title>
     
      <link rel="stylesheet" href="styless.css">
     <!-- fontawsome CDNS linke -->
@@ -27,10 +27,16 @@
         <hr>
         <a class="nav-link experience" href="video.html">Video Demo</a>
         <hr>
-        <a class="nav-link contact" href="siteReport.html">Site Report</a>
+        <div class="dropdown">
+            <a class="nav-link contact" href="siteReport.html">Site Report</a>
+            <div class="dropdown-content">
+                <a href="report1.html">Report 1</a>
+                <a href="report2.html">Report 2</a>
+                <a href="report3.html">Report 3</a>
+            </div>
+        </div>
         <hr>
     </div>
-
     <div class="video-demo">
         <div class="demo">
             <h1>Video Demo</h1>
