update all pages

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,14 +28,7 @@
         <hr>
         <a class="nav-link experience" href="video.html">Video Demo</a>
         <hr>
-        <div class="dropdown">
-            <a class="nav-link contact" href="siteReport.html">Site Report</a>
-            <div class="dropdown-content">
-                <a href="report1.html">Report 1</a>
-                <a href="report2.html">Report 2</a>
-                <a href="report3.html">Report 3</a>
-            </div>
-        </div>
+        <a href="siteReport.html">Site Report</a>
         <hr>
     </div>
 
