--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html
 <html lang="en">
 <head>
- <meta charset="UTF-8">
-    <title>Portfolio | Homne</title>
-    
-     <link rel="stylesheet" href="styless.css">
+    <meta charset="UTF-8">
+    <title>Portfolio | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styless.css">
     <!-- fontawsome CDNS linke -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
 </head>
 <body>
-    <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+
+    <!-- hamburger icon -->
+    <div class="togglearea">
+		<label for="bars">
+			<span></span>
+			<span></span>
+			<span></span>
+			
+		</label>
+	</div>
+
+	<input type="checkbox" id="bars">
 
     <div class="sidebar">
         <div class="image_container">
             <img src="image/flower.jpg" alt="profile Picture">
         </div>
-        <a class="nav-link about" href="index.html">Home</a>
-        <hr>
-        <a class="nav-link contact" href="project.html">Project</a>
-        <hr>
-        <a class="nav-link portfolio" href="contact.html">Contact Us</a>
-        <hr>
-        <a class="nav-link experience" href="video.html">Video Demo</a>
-        <hr>
-        <a href="siteReport.html">Site Report</a>
-        <hr>
+            <a class="nav-link about" href="index.html">Home</a>
+            <hr>
+            <a class="nav-link contact" href="project.html">Project</a>
+            <hr>
+            <a class="nav-link portfolio" href="contact.html">Contact Us</a>
+            <hr>
+            <a class="nav-link experience" href="video.html">Video Demo</a>
+            <hr>
+            <a href="siteReport.html">Site Report</a>
+            <hr>
     </div>
 
     <div class="container">
