--- a/portfolio/video.html
+++ b/portfolio/video.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
  <meta charset="UTF-8">
@@ -5,16 +6,20 @@
     
      <link rel="stylesheet" href="styless.css">
     <!-- fontawsome CDNS linke -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
+
 
 </head>
 <body>
-    <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-
+      <!-- hamburger icon -->
+      <div class="togglearea">
+		<label for="bars">
+		    <span></span>
+            <span></span>
+            <span></span>
+		</label>
+	</div>
+    <input type="checkbox" id="bars">
     <div class="sidebar">
         <div class="image_container">
             <img src="image/flower.jpg" alt="profile Picture">
@@ -36,9 +41,14 @@
         </div>
         <hr>
         <div class="video">
-            <div style="max-width:800px"><div style="position:relative;padding-bottom:63.75%"><iframe id="kmsembed-0_1xrtqukt" width="800" height="510" src="https://mymedia.northampton.ac.uk/embed/secure/iframe/entryId/0_1xrtqukt/uiConfId/23453349/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="CSY3024_Dipak_KC_Database_Assignment" style="position:absolute;top:0;left:0;width:100%;height:100%;border:0"></iframe></div></div>
+            <iframe id="kmsembed-0_ldr47ql5" width="800" height="510" src="https://mymedia.northampton.ac.uk/embed/secure/iframe/entryId/0_ldr47ql5/uiConfId/23453349/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="TCA2 CC"></iframe>
+        </div>
+        <div class="video2">
+            <iframe id="kmsembed-0_ldr47ql5" width=" 640" height="420" src="https://mymedia.northampton.ac.uk/embed/secure/iframe/entryId/0_ldr47ql5/uiConfId/23453349/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="TCA2 CC"></iframe>
         </div>
     </div>
+    <hr style="margin-top:30px;">   
+
 
 
 
