--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -38,60 +38,99 @@
         <a href="siteReport.html">Site Report</a>
         <hr>
     </div>
+
+
+    <!-- Section for contact information or contact form -->
     <div class="contact-me">
+        <!---contact section  --->
         <div class="contact">
+            <!-- Main heading "Contact" -->
             <h1>Contact</h1>
         </div>
+        <!-- Container for personal information or profile -->
         <div class="me">
+          <!-- Main heading "Me" -->
             <h1>Me</h1>
+
         </div>
     </div> 
-
+    <!--- manageing the contact in horizontal rule--->
     <hr class="contact-hr">
+    <!-- putting contact information--->
     <div class="contact-info">
+        <!--this is world map image-->
         <img src="image/map.jpg" class="map-image" alt="world-map">
-
+        <!--- this is the contact from the section -->
         <div class="contact-form">
+            <!-- This is a form with POST method -->
             <form action="#" method="POST">
+                <!-- This is a form group container -->
                 <div class="form-group">
+                    <!-- Label for the Full Name input field -->
                     <label for="name">Full Name:</label>
-                    <input type="text" id="name" placeholder="Enter your name">
+                    <!-- Text input for Full Name -->
+                    <input type="text" id="name" 
+                    placeholder="Enter your name">
                 </div>
+                <!-- This div is used to group form elements -->
                 <div class="form-group">
+                    <!-- Label for the Phone Number input field -->
                     <label for="phone">Phone Number:</label>
+                    <!-- Input field for entering phone number with a placeholder -->
                     <input type="tel" id="phone" placeholder="Enter your phone number">
                 </div>
+                <!-- Container for grouping form elements -->
                 <div class="form-group">
+                    <!-- Label for the Address input field -->
                     <label for="address">Address:</label>
+                    <!-- Text input for entering address with a placeholder -->
                     <input type="text" id="address" placeholder="Enter your address">
                 </div>
+                <!-- Container for grouping form elements -->
                 <div class="form-group">
+                    <!-- Label for the Description input field -->
                     <label for="address">Description:</label>
+                    <!-- Textarea for entering description with 50 columns -->
                     <textarea cols="50">
+                    
                     </textarea>
                 </div>
-                
+
+                <!-- Form group container for organizing form elements -->
                 <div class="form-group">
+                    <!-- Submit button -->
                     <button type="submit">Submit</button>
                 </div>
             </form>
         </div>
     </div>
     <hr>
+    <!-- Section for getting in touch -->
     <div class="get-in-touch">
+        <!-- Placeholder div with class "get-i" -->
         <div class="get-i">
+            <!-- Placeholder div with class "get-i" -->
             <h1>Get i</h1>
         </div>
+        <!-- Container for touch-related content -->
         <div class="n-touch">
             <h1>n touch</h1>
         </div>
     </div>
 
+    <!-- Container for email button -->
     <div class="email-btn">
+        <!-- Container for button -->
         <div class="btn">
+            <!-- Link to send message via email -->
             <a href="mailto:subedigurash1@gmail.com">Send Message</a>
         </div>
     </div>
+
+
+
+
+
 
     <footer>
         <div class="footer">
