--- a/portfolio/siteReport.html
+++ b/portfolio/siteReport.html
@@ -81,7 +81,7 @@
             <h3>Submitted By</h3>
             <h3>Gurash Subedi</h3>
             <h3>24812861</h3>
-            <h3 class="video-link">Video link: <a href="https://www.youtube.com/watch?v=-ETQ97mXXF0" target="_blank" class="video-link-new">Click to open video</a></h3>
+            <h3 class="video-link">Video link: <a href="https://mymedia.northampton.ac.uk/media/CSY1063_Web_Assignment_Gurash_Subedi/0_c8sbllq0" target="_blank" class="video-link-new">Click to open video</a></h3>
             <br>
             <hr>
         </div>
